--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cli",
+  "name": "js-notebook-lerna",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^8.3.0",
-    "local-api": "^1.0.0"
+    "@js-notebook-lerna/local-api": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.13",
