--- a/packages/local-client/package.json
+++ b/packages/local-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "local-client",
+  "name": "@js-notebook-lerna/local-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
