--- a/packages/local-client/package.json
+++ b/packages/local-client/package.json
@@ -5,7 +5,7 @@
   "files": [
     "build"
   ],
-  "dependencies": {
+  "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@monaco-editor/react": "3.7.5",
     "@testing-library/jest-dom": "^5.16.1",
