Set packages to be publicly accessible

--- a/packages/local-api/package.json
+++ b/packages/local-api/package.json
@@ -2,6 +2,9 @@
   "name": "@js-notebook-lerna/local-api",
   "version": "1.0.0",
   "description": "",
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "dist"
   ],
