--- a/packages/local-client/package.json
+++ b/packages/local-client/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@js-notebook-lerna/local-client",
   "version": "0.1.0",
-  "private": true,
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "build"
   ],
