--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,12 +18,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "commander": "^8.3.0",
-    "@js-notebook-lerna/local-api": "^1.0.0"
+    "@js-notebook-lerna/local-client": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.13",
     "esbuild": "0.8.26",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "commander": "^8.3.0",
+    "@js-notebook-lerna/local-api": "^1.0.0"
   }
 }
