--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -12,7 +12,6 @@
   "scripts": {
     "start": "tsc --watch --preserveWatchOutput",
     "prepublishOnly": "esbuild src/index.ts --platform=node --outfile=dist/index.js --bundle --minify --define:process.env.NODE_ENV=\\\"production\\\""
-
   },
   "keywords": [],
   "author": "",
@@ -21,10 +20,10 @@
     "@js-notebook-lerna/local-client": "^1.0.0"
   },
   "devDependencies": {
+    "@js-notebook-lerna/local-api": "^1.0.0",
     "@types/node": "^17.0.13",
-    "esbuild": "0.8.26",
-    "typescript": "^4.5.5",
     "commander": "^8.3.0",
-    "@js-notebook-lerna/local-api": "^1.0.0"
+    "esbuild": "0.8.26",
+    "typescript": "^4.5.5"
   }
 }
